--- a/mentor.html
+++ b/mentor.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0"/>
-        <title>Masai investor</title>
+        <title>Masai investors</title>
     <style>
         p{
             margin: -5px 0 ;
@@ -40,7 +40,7 @@
     </style>
     </head>
     <body>
-        <h1>Strategic Invertor</h1>
+        <h1>Strategic Invertors</h1>
         <div id="parentBox">
         <div class ="box">
             <img class="avater" src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Vijay_Shekhar_Sharma_Paytm_96f52579b8.jpg" alt="Vijay Shekhar Sharm...">
