--- a/mentor.html
+++ b/mentor.html
@@ -15,10 +15,11 @@
             /*width: 80%;*/
             /*border: 2px solid crimson;*/
             display: flex;
+            margin-top: 5%;
             /*box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;*/
         }
         .box{
-            width: 23%;
+            width: 20%;
             /*border: 1px solid crimson;/
             /*height: 300px;*/ 
             margin: auto;
@@ -26,7 +27,9 @@
             border-radius: 8px;
         }
         .avater{
-            width: 100%;
+            width: 253px;
+            height: 250px;
+            max-width: auto;
             border-radius: 8px;
         }
         .tc{
