--- a/movie.html
+++ b/movie.html
@@ -20,14 +20,14 @@
             /*box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;*/
         }
         .box{
-            width: 30%;
+            width: 33%;
             /*border: 1px solid crimson;*/
             height: 400px; 
             margin: auto;
             box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
         }
         .avater{
-            width: 337px;
+            width: 370px;
             height: 250px;
         }
         .tc{
@@ -37,6 +37,16 @@
         .pc{
             text-align: center;
             margin: 5%;
+        }
+        .but {
+        background-color: skyblue;
+        border: none;
+        color: rgb(12, 10, 10);
+        padding: 10px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 12px;
         }
     </style>
     </head>
